--- a/SimpleWeb.FrontEnd.WebApp/Pages/Weather.razor
+++ b/SimpleWeb.FrontEnd.WebApp/Pages/Weather.razor
@@ -7,7 +7,7 @@
 
 <p>This component demonstrates fetching data from the server.</p>
 
-@if (forecasts == null)
+@if (_forecasts == null)
 {
     <p>
         <em>Loading...</em>
@@ -25,7 +25,7 @@ else
         </tr>
         </thead>
         <tbody>
-        @foreach (var forecast in forecasts)
+        @foreach (WeatherForecast forecast in _forecasts)
         {
             <tr>
                 <td>@forecast.Date.ToShortDateString()</td>
@@ -39,20 +39,27 @@ else
 }
 
 @code {
-    private WeatherForecast[]? forecasts;
+    private WeatherForecast[]? _forecasts;
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        WeatherForecast newForecast = new WeatherForecast
+        {
+            Date = new DateOnly(2021, 1, 1),
+            TemperatureC = 25,
+            Summary = "Sunny"
+        };
+        _forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        _forecasts = _forecasts?.Append(newForecast).ToArray();
     }
 
     public class WeatherForecast
     {
-        public DateOnly Date { get; set; }
+        public DateOnly Date { get; init; }
 
-        public int TemperatureC { get; set; }
+        public int TemperatureC { get; init; }
 
-        public string? Summary { get; set; }
+        public string? Summary { get; init; }
 
         public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
     }
